from the outside finish